# OpenClaw-Readwise

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
docs/: architecture.md
references/: behavior-contract.md  eval-cases.example.json
scripts/: readwise_cli.py  readwise_connector.py  readwise_export.py  readwise_normalize.py  readwise_semantic.py  readwise_store.py  readwise_synthesis.py
