[project]
name = "openclaw-readwise"
version = "0.1.0"
description = "Opinionated Readwise retrieval tooling and OpenClaw skill scaffolding for grounded answers from saved reading."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Grant Gochnauer" }
]
keywords = ["openclaw", "readwise", "reader", "retrieval", "knowledge-management"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/GrantGochnauer/OpenClaw-Readwise"
Repository = "https://github.com/GrantGochnauer/OpenClaw-Readwise"

[tool.setuptools]
py-modules = []
